--- a/Gorkem_/appsettings.Development.json
+++ b/Gorkem_/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //   "GorkemAppConnection": "Server=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GorkemFinalDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "GorkemAppConnection": "server=sql7.freemysqlhosting.net;port=3306;userid=sql7729287;password=yApTRnXm4d;database=sql7729287;"
+    "GorkemAppConnection": "Server=89.252.187.226\\MSSQLSERVER2019;Database=abdurra8_gorkem;User Id=abdurra8_gorkem;Password=xIrcod-6ciqni-tidbud;TrustServerCertificate=True"
 
   },
   "Logging": {
