--- a/Gorkem_/appsettings.Development.json
+++ b/Gorkem_/appsettings.Development.json
@@ -9,5 +9,31 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  
+    "Serilog": {
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning"
+        }
+      },
+      "WriteTo": [
+        {
+          "Name": "MSSqlServer",
+          "Args": {
+            "connectionString": "Server=172.16.22.99;Database=GorkemAppLogDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True",
+            "tableName": "Logs",
+            "autoCreateSqlTable": true,
+            "restrictedToMinimumLevel": "Information",
+            "columnOptionsSection": {
+              "addStandardColumns": [ "LogEvent" ]
+            }
+          }
+        }
+      ]
+    }
   }
-}
+
+ 
