created jwt token

--- a/Gorkem_/appsettings.json
+++ b/Gorkem_/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "bu_cok_gizli_ve_uzun_bir_anahtar_olmali_en_az_32_karakter",
+    "Issuer": "GorkemAPI",
+    "Audience": "GorkemClient",
+    "ExpirationInMinutes": 60
+  }
 }
