--- a/Gorkem_/appsettings.json
+++ b/Gorkem_/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //   "GorkemAppConnection": "Server=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GorkemFinalDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "GorkemAppConnection": "Server=10.203.6.146;Database=GorkemAppDb;User Id=sa;Password=Narko2020!!;TrustServerCertificate=True"
+    // "GorkemAppConnection": "Server=172.16.22.99;Database=GorkemAppDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
