--- a/Gorkem_/appsettings.json
+++ b/Gorkem_/appsettings.json
@@ -1,19 +1,14 @@
-{ //Production
-    "ConnectionStrings": {
-        "GorkemAppConnection": "Server=10.203.6.146;Database=GorkemAppDb;User Id=sa;Password=Narko2020!!;TrustServerCertificate=True"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "JwtSettings": {
-        "SecretKey": "bu_cok_gizli_ve_uzun_bir_anahtar_olmali_en_az_32_karakter",
-        "Issuer": "GorkemAPI",
-        "Audience": "GorkemClient",
-        "ExpirationInMinutes": 60
-    },
-
+{
+  "ConnectionStrings": {
+    "GorkemAppConnection": "Server=10.203.6.146;Database=GorkemAppDb;User Id=sa;Password=Narko2020!!;TrustServerCertificate=True"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore.Authentication": "Debug",
+      "Microsoft.IdentityModel": "Debug",
+      "System": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
